# gotenna-atak-lib

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
atak_lib/: __init__.py  catalog.py  registry.py  spec.py
atak_lib/commands/: __init__.py
atak_lib/commands/ui/: verify_device_details_screen.yaml  (+2 more)
atak_lib/device/: adb.py  permissions.py
atak_lib/execution/: driver_runner.py
atak_lib/radio/: bluetooth.py
atak_lib/runtime/: __init__.py  inventory.py  parallel.py
atak_lib/selectors/: __init__.py
atak_lib/server/: __init__.py  app.py
atak_lib/session/: capabilities.py  session_manager.py  stub_driver.py
atak_lib/ui/: base.py  locators.py  navigation.py  screen.py  verify.py  verify_device_details_screen.py  verify_onboarding_screen.py  verify_set_as_relay_dialog.py
docs/: migration-verify-to-screen.md
docs/design/: shared-ui-driver.md
docs/rfc/: 0001-shared-ui-driver.md
examples/: __init__.py  consumer_oracle.py
tests/unit/: conftest.py  test_adb_and_bluetooth.py  test_capabilities.py  test_catalog_roots.py  test_device_smoke.py  test_driver_runner.py  test_example_oracle.py  test_legacy_versioning_contract.py  test_parallel_pinning.py  test_permissions.py  test_public_api.py  test_registry.py  test_runtime_inventory.py  test_screen.py  test_selectors.py  test_server.py  test_session_manager_stub.py  test_spec.py  test_spec_roots.py  test_tripwire.py  test_verify_device_details_screen.py  test_verify_onboarding_screen.py  test_verify_set_as_relay_dialog.py  test_version_aware_specs.py
(+4 files in other folders)
